Sun Jan 14 20:38:25 EST 2007	JK Lowden <jklowden@freetds.org>
	* include/dblib.h include/tds.h
	* src/dblib/dblib.c src/dblib/dbutil.c
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0012.c
	* src/dblib/unittests/timeout.c
	* src/tds/net.c TODO
	- timeout unit test also works with dbsetinterrupt
	
Sat Jan 13 17:09:05 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/unittests/timeout.c added 
	* src/dblib/dblib.c 
	* src/dblib/unittests/Makefile.am src/dblib/unittests/t0001.c
	* src/tds/login.c src/tds/query.c src/tds/util.c
	- new timeout unit test works. 
	
Fri Jan 12 14:28:32 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: update code to new libTDS timeout code
	* src/tds/net.c: handle send/recv errors
	* src/tds/util.c: fix msgno if error not found in table

Thu Jan 11 10:49:52 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/apps/osql 
	- fixed incorrect report when drivername is not a file

Tue Jan 09 22:44:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: fix option problem

Tue Jan  9 00:16:46 EST 2007	JK Lowden <jklowden@schemamania.org>
	* src/tds/net.c simpler tds_select, thanks Frediano

Sun Jan  7 10:45:23 EST 2007	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/ctutil.c works with tdserror()

Sun Jan  7 00:41:19 EST 2007	JK Lowden <jklowden@schemamania.org>
	* include/tds.h
	* src/dblib/dblib.c src/dblib/dbutil.c
	* src/tds/net.c src/tds/query.c
	* src/tds/token.c src/tds/util.c
	- implement new timeout strategy using tds_select() and 
	- calling the client library's error handler (via tdserror). 
	- db-lib no worse than before, others not yet tested. 

Fri Jan 05 14:08:53 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/token.c: new token
	* src/tds/util.c: optimize

Fri Jan  5 02:08:54 EST 2007	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/tds/net.c src/tds/util.c
	- begin new timeout strategy, not done.
